objects/IntegrationExceptionRecStatus__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used in Integration Exception Notifications, mapping between object and it&apos;s status field + value to be set via integration exception notifications.
* The object API name should be lowercase.</description>
    <fields>
        <fullName>Status_API_Name__c</fullName>
        <label>Status API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Value__c</fullName>
        <label>Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Integration Exception Record Status</label>
</CustomObject>